#
# Copyright (C) 2004 Cedric Pinson
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
#
# Authors:
#  Cedric Pinson <cpinson@freesheep.org>
#  
# 
MAINTAINERCLEANFILES = Makefile.in

EXTRA_DIST = \
	Doxygen \
	htmldata/background.png \
	htmldata/doxygen.css \
	htmldata/libnoise.png \
	htmldata/templatefooter.html \
	htmldata/templateheader.html
	img/curve.png \
	img/gradientcolor.png \
	img/modelcylinder.png \
	img/modelsphere.png \
	img/moduleabs.png \
	img/moduleadd.png \
	img/modulebillow.png \
	img/moduleblend.png \
	img/modulecheckerboard.png \
	img/moduleclamp.png \
	img/moduleconst.png \
	img/modulecurve.png \
	img/modulecylinders.png \
	img/moduledisplace.png \
	img/moduleexponent.png \
	img/moduleinvert.png \
	img/modulemax.png \
	img/modulemin.png \
	img/modulemultiply.png \
	img/moduleperlin.png \
	img/modulepower.png \
	img/moduleridgedmulti.png \
	img/modulerotatepoint.png \
	img/modulescalebias.png \
	img/modulescalepoint.png \
	img/moduleselect.png \
	img/modulespheres.png \
	img/moduleterrace.png \
	img/moduletranslatepoint.png \
	img/moduleturbulence.png \
	img/modulevoronoi.png \
	img/terrace.png

all-local:
	doxygen

clean-local:
	rm -fr html
